// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Render with background levelDirection one 1`] = `
<rect
  fill="#EAF6EB"
  height="80"
  opacity="100%"
  width="600"
  x="100"
  y="100"
/>
`;

exports[`Render with background levelDirection one 2`] = `
<rect
  fill="#FFEFC7"
  height="40"
  opacity="100%"
  width="600"
  x="100"
  y="180"
/>
`;

exports[`Render with background levelDirection one 3`] = `
<rect
  fill="#FFE5E2"
  height="80"
  opacity="100%"
  width="600"
  x="100"
  y="220"
/>
`;

exports[`Render with background levelDirection zero 1`] = `
<rect
  fill="#FFE5E2"
  height="80"
  opacity="100%"
  width="600"
  x="100"
  y="100"
/>
`;

exports[`Render with background levelDirection zero 2`] = `
<rect
  fill="#FFEFC7"
  height="40"
  opacity="100%"
  width="600"
  x="100"
  y="180"
/>
`;

exports[`Render with background levelDirection zero 3`] = `
<rect
  fill="#EAF6EB"
  height="80"
  opacity="100%"
  width="600"
  x="100"
  y="220"
/>
`;

exports[`Render with format and lang = en 1`] = `
<line
  class="visx-line"
  fill="transparent"
  height="25"
  shape-rendering="crispEdges"
  stroke="#989898"
  stroke-width="1"
  x1="0"
  x2="600"
  y1="300"
  y2="300"
/>
`;

exports[`Render with format and lang = en 2`] = `
<line
  class="visx-line"
  fill="transparent"
  height="25"
  shape-rendering="crispEdges"
  stroke="#989898"
  stroke-width="1"
  x1="0"
  x2="600"
  y1="140"
  y2="140"
/>
`;

exports[`Render with format and lang = en 3`] = `
<line
  class="visx-line"
  fill="transparent"
  height="25"
  shape-rendering="crispEdges"
  stroke="#989898"
  stroke-width="1"
  x1="0"
  x2="600"
  y1="100"
  y2="100"
/>
`;

exports[`Render with format and lang = nb 1`] = `
<line
  class="visx-line"
  fill="transparent"
  height="25"
  shape-rendering="crispEdges"
  stroke="#989898"
  stroke-width="1"
  x1="0"
  x2="600"
  y1="300"
  y2="300"
/>
`;

exports[`Render with format and lang = nb 2`] = `
<line
  class="visx-line"
  fill="transparent"
  height="25"
  shape-rendering="crispEdges"
  stroke="#989898"
  stroke-width="1"
  x1="0"
  x2="600"
  y1="140"
  y2="140"
/>
`;

exports[`Render with format and lang = nb 3`] = `
<line
  class="visx-line"
  fill="transparent"
  height="25"
  shape-rendering="crispEdges"
  stroke="#989898"
  stroke-width="1"
  x1="0"
  x2="600"
  y1="100"
  y2="100"
/>
`;

exports[`Render with other format 1`] = `
<line
  class="visx-line"
  fill="transparent"
  height="25"
  shape-rendering="crispEdges"
  stroke="#989898"
  stroke-width="1"
  x1="0"
  x2="600"
  y1="300"
  y2="300"
/>
`;

exports[`Render with other format 2`] = `
<line
  class="visx-line"
  fill="transparent"
  height="25"
  shape-rendering="crispEdges"
  stroke="#989898"
  stroke-width="1"
  x1="0"
  x2="600"
  y1="140"
  y2="140"
/>
`;

exports[`Render with other format 3`] = `
<line
  class="visx-line"
  fill="transparent"
  height="25"
  shape-rendering="crispEdges"
  stroke="#989898"
  stroke-width="1"
  x1="0"
  x2="600"
  y1="100"
  y2="100"
/>
`;

exports[`Standard render 1`] = `
<line
  class="visx-line"
  fill="transparent"
  height="25"
  shape-rendering="crispEdges"
  stroke="#989898"
  stroke-width="1"
  x1="0"
  x2="600"
  y1="300"
  y2="300"
/>
`;

exports[`Standard render 2`] = `
<line
  class="visx-line"
  fill="transparent"
  height="25"
  shape-rendering="crispEdges"
  stroke="#989898"
  stroke-width="1"
  x1="0"
  x2="600"
  y1="140"
  y2="140"
/>
`;

exports[`Standard render 3`] = `
<line
  class="visx-line"
  fill="transparent"
  height="25"
  shape-rendering="crispEdges"
  stroke="#989898"
  stroke-width="1"
  x1="0"
  x2="600"
  y1="100"
  y2="100"
/>
`;
